[package]
name = "layerw"
version = "0.1.0"
edition = "2024"

[lib]
name = "layerw"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "layerw-bin"
path = "src/main.rs"

[dependencies]
winit = "0.30.8"
wgpu = "25.0.0"
reqwest = "0.12.15"
log = "0.4.20"
cfg-if = "1.0"
pollster = "0.3"
glam = "0.30.3"
bytemuck = {version = "1.23.0", features = ["derive"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wry = "0.51.2"
urlencoding = "2.1.3"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = {version = "25.0.0", features = ["webgpu"]}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
js-sys = "0.3.77"
web-sys = {version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement", "console"]}

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1