[package]
name = "walloc"
version = "0.1.0"
edition = "2024"

[lib]
name = "walloc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "walloc-bin"
path = "src/main.rs"

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1