[package]
name = "wwindow"
version = "0.1.0"
edition = "2021"

[lib]
name = "wwindow"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wwindow-bin"
path = "src/main.rs"

[dependencies]
winit = "0.29.15"
wgpu = "0.19.3"
pollster = "0.3"
env_logger = "0.11"
log = "0.4.20"
cfg-if = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.19.3", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
